<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:layoutDirection="locale"
    tools:context=".fragments.ChooseTypeFragment">


    <TextView
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_62sdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:background="@drawable/box_bg"
        android:padding="@dimen/_9sdp"
        android:text="@string/some_text_about_app"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_13sdp" />

    <ImageView
        android:layout_width="@dimen/_55sdp"
        android:layout_height="@dimen/_55sdp"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/_80sdp"
        android:layout_marginEnd="@dimen/_22sdp"
        app:srcCompat="@drawable/ic_android_black_24dp" />


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_150sdp">

        <ImageView
            android:id="@+id/Icon"
            android:layout_width="@dimen/_10sdp"
            android:layout_height="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:transitionName="Icon"
            app:layout_constraintEnd_toStartOf="@id/chooseTypeText"
            app:layout_constraintTop_toTopOf="@id/chooseTypeText"
            app:srcCompat="@drawable/ic_android_black_24dp" />

        <TextView
            android:id="@+id/chooseTypeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/choose_type"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_16sdp"
            android:transitionName="TypeText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </android.support.constraint.ConstraintLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_200sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:orientation="vertical">


        <Button
            android:id="@+id/secondType"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:text="@string/second_type"
            android:transitionName="secondType" />

        <Button
            android:id="@+id/firstType"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_22sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:text="@string/first_type"
            android:transitionName="firstType" />


        <Button
            android:id="@+id/thirdType"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_22sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:text="@string/third_type"
            android:transitionName="thirdType" />

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <TextView
        android:id="@+id/language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="@dimen/_8sdp"
        android:gravity="center"
        android:text="@string/language"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/_13sdp"
        android:textStyle="bold" />

</FrameLayout>